2007-09-18  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-code-dialog.c: Making the hardcoded WIDTH/HEIGHT values a
	little bit bigger. Fixes: #NB63694.

2007-09-17  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.15-1 release]

	* NEWS:
	* configure.ac:
	* debian/changelog: Updating.

2007-09-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* doc/Makefile.am:
	* doc/hildon-docs.sgml:
	* doc/images/bread-crumb-trail.png:
	* doc/images/calendar-popup.png:
	* doc/images/caption.png:
	* doc/images/code-dialog.png:
	* doc/images/color-button.png:
	* doc/images/color-chooser-dialog.png:
	* doc/images/color-chooser.png:
	* doc/images/controlbar.png:
	* doc/images/date-editor.png:
	* doc/images/font-selection-dialog.png:
	* doc/images/get-password-dialog.png:
	* doc/images/hvolumebar.png:
	* doc/images/login-dialog.png:
	* doc/images/note.png:
	* doc/images/number-editor.png:
	* doc/images/range-editor.png:
	* doc/images/seekbar.png:
	* doc/images/set-password-dialog.png:
	* doc/images/sort-dialog.png:
	* doc/images/time-editor.png:
	* doc/images/time-picker.png:
	* doc/images/vvolumebar.png:
	* doc/images/weekday-picker.png: Adding the new generated widget shots.
	Adding the bread-crumb-trial and helpers to the documentation.

2007-09-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/hildon-find-toolbar-example.c:
	* src/hildon-find-toolbar.c:
	* src/hildon-find-toolbar.h: FIxing the default history-append handler to
	actually continue firing the other handlers if connected. Adding a new
	function:
	hildon_find_toolbar_get_last_index that gets the index of the most
	recently added (last) item. Fixes: NB#52301.

2007-09-10  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-caption.c: Applying a patch by Tommi to fix the focus
	behaviour. Fixes: NB#68610. 

2007-09-10  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
